--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "test": "mocha"
   },
   "dependencies": {
-    "socket.io": ">=0.9.6"
+    "socket.io": "0.9.17"
   },
   "devDependencies": {
      "mocha": "*",
